Update cache pool